--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Hi, my name is Kishan. I am a researcher and developer working to solve artificial intelligence. My work is on Natural Langauge Processing, specifically on Information Retrieval and Low Resource Langauges and I have been exploring Recommendation engines recently. I want to design and develop different techniques for retrieving information from the internet. I completed my Bachelor of Engineers from VTU, Bangalore, India and I am currently pursuing Master of Data Science, Computational Linguistics from The University of British Columbia. If you would like to know more about me and what I'm thinking, check out my GitHub and blog. If you would like to contact me, you can reach out to me on LinkedIn or email me. 
                     </p>
                 </div>
             </div>
@@ -93,28 +91,36 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="October 2020 – Present">
+                <h3>The University of British Columbia</h3>
+                <h4>Research Assistant</h4>
+                <ul>
+                    <li>Assisted Dr. Miikka Silfverberg to conduct research on International Phonetic Alphabet generation for Low Resource Languages (Grapheme-to-Phoneme) for STT (Speech to Text) and TTS applications.</li>
+                    <li>Developed deep learning (transformer) models using ONMT and Hugging Face for MultiLingual Corpora.</li>
+                    <li>Project link - <a href="https://github.com/sigmorphon/">https://github.com/sigmorphon/</a></li>
+	                <li><i>Libraries and frameworks: Pytorch, ONMT, HuggingFace, Slurm (Resource manager)</i></li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="November 2018 – August 2020">
+                <h3>Reliance Jio infocomm</h3>
+                <h4>Data Scientist</h4>
+                <ul>
+                    <li>Developed an engine to segregate 150 million users into pre-defined hierarchical taxonomy of 1800 segments for ad-targeting.</li>
+                    <li>Engine components - URL classification, Named Entity Recognition, Language detection up to 83 languages including Indian regional languages, Machine translation for Low Resource langauges (Hindi to English, Tamil to English)</li>
+                    <li>Publication - <a href="https://ieeexplore.ieee.org/document/9031888">Content Based Hierarchical URL Classification with Convolutional Neural Networks</a></li>
+	                <li><i>Libraries and frameworks: Pytorch, spaCy, NLTK, Spark, Hadoop, Flask, Scraping tools</i></li>
+                </ul>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+            <div data-date="January 2018 – November 2018">
+                <h3>Analytics India magazine</h3>
+                <h4>Data Scientist</h4>
+                <ul>
+                    <li>Developed the backend of the platform from submission to leaderboard metrics.</li>
+                    <li>Designed hackathons related to NLP, Computer Vision, and Tabular Numerical/Categorical data.</li>
+                    <li>Platform link - <a href="https://machinehack.com">Machine Hack</a></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -123,30 +129,16 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            <h3>The University of British Columbia, Vancouver, BC, Canada</h3>
+            <span class="education-date">Sept 2020 - Present</span>
+            <h4>Master of Data science, Computational Linguistics</h4>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
+            <h3>Visvesvaraya technological university, Bangalore, KA, India</h3>
+            <span class="education-date">June 2012 - July 2016</span>
+            <h4>Bachelor of Engineering, Electronics and Communications</h4>
         </div>
         <!-- End .education-block -->
     </div>
@@ -158,15 +150,15 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/test.png" width="300" height="200"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Search Engine - Web application</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Inverted index search engine with a machine learning classifier to segregate, classify and rank the documents. To explore more, feel free to play around with the page by searching ingredients and filter your search result using the drop down menu.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/kmaladkar/information_retrieval-search_engine-webapp">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -174,15 +166,30 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/doc_rank.png" width="250" height="200"/>
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Document Ranking</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Baseline is OkapiBM25 serach algorithm. Explored BERT and T5 for document ranking task with an annotated dataset of relevant and non relevant document.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/kmaladkar/information_retrieval-T5_BERT-ranking">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/Intent-Classification.png" width="300" height="200"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Joint Intent Extraction and Slot filling</h3>
+                        <p>
+                            Used Conditional random fields build the feature representations from query and a sequence label with BIOS notation. Exploring neurl approaches with multi task learning.
+                        </p>
+                        <a href="https://github.com/kmaladkar/information_retrieval-intent_extraction-slot_filling">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -192,7 +199,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="skills">
+    <!-- <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
@@ -222,7 +229,7 @@
             <li>C++</li>
             <li>Ruby on Rails</li>
         </ul>
-    </div>
+    </div> -->
     <!-- End #skills -->
 
     <!-- <div id="contact">
@@ -244,36 +251,14 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2020 YOUR NAME
+                        Copyright &copy; 2021 Kishan Maladkar
                     </p>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
-                </div>
-                <div class="col-sm-5 social">
-                    <ul>
-                        <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
-                    </ul>
-                </div>
+                </div>  
             </div>
         </div>
     </footer>
