--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property='og:title' content='Kishan Maladkar'/>
+    <meta property='og:image' content='https://github.com/kmaladkar/portfolio/blob/master/images/website.png'/>
+    <meta property='og:description' content="I am a researcher and developer working to solve artificial intelligence. My work is on Natural Langauge Processing, specifically on Information Retrieval and Low Resource Langauges and I have been exploring Recommendation engines recently. I want to design and develop different techniques for retrieving information from the internet. I completed my Bachelor of Engineers from VTU, Bangalore, India and I am currently pursuing Master of Data Science, Computational Linguistics from The University of British Columbia. If you would like to know more about me and what I'm thinking, check out my GitHub and blog. If you would like to contact me, you can reach out to me on LinkedIn or email me."/>
+    <meta property='og:url' content='https://kmaladkar.github.io/portfolio/'/>
     <title>My Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
