capstone project updated

--- a/index.html
+++ b/index.html
@@ -154,6 +154,22 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/tr.png" width="300" height="200"/>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>The University of British Columbia, MDS Capstone (Confidential)</h3>
+                        <h4>Capstone Project at Thomson Reuters: May 2021 - July 2021</h4>
+                        <p>
+                            Search, Document Retrieval and Ranking
+                        </p>
+                        <!-- <a href="https://github.com/kmaladkar/information_retrieval-search_engine-webapp">View Project</a> -->
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/test.png" width="300" height="200"/>
                     </div>
                     <!-- End .project-image -->
@@ -176,7 +192,7 @@
                     <div class="project-info">
                         <h3>Document Ranking</h3>
                         <p>
-                            Baseline is OkapiBM25 serach algorithm. Explored BERT and T5 for document ranking task with an annotated dataset of relevant and non relevant document.
+                            Baseline is OkapiBM25 serach algorithm. BERT and T5 for document ranking task with an annotated dataset of relevant and non relevant document with MS MARCO dataset.
                         </p>
                         <a href="https://github.com/kmaladkar/information_retrieval-T5_BERT-ranking">View Project</a>
                     </div>
@@ -191,7 +207,7 @@
                     <div class="project-info">
                         <h3>Joint Intent Extraction and Slot filling</h3>
                         <p>
-                            Used Conditional random fields build the feature representations from query and a sequence label with BIOS notation. Exploring neurl approaches with multi task learning.
+                            Conditional random fields to represent features from query and a sequence label with BIOS notation. Exploring neurl approaches with multi task learning.
                         </p>
                         <a href="https://github.com/kmaladkar/information_retrieval-intent_extraction-slot_filling">View Project</a>
                     </div>
