capstone project updated

--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>The University of British Columbia, MDS Capstone (Confidential)</h3>
-                        <h4>Capstone Project at Thomson Reuters: May 2021 - July 2021</h4>
+                        <h3>UBC MDS Capstone Project<br>Center for AI and Cognitive Computing</h3>
                         <p>
-                            Search, Document Retrieval and Ranking
+                            IMPROVING SEARCH WITH DEEP LEARNING FOR A MARKET LEADING ACCOUNTING RESEARCH PLATFORM<br>
+                            May 2021 - July 2021
                         </p>
+                        
                         <!-- <a href="https://github.com/kmaladkar/information_retrieval-search_engine-webapp">View Project</a> -->
                     </div>
                     <!-- End .project-info -->
