capstone project updated

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="project-info">
                         <h3>UBC MDS Capstone Project<br>Center for AI and Cognitive Computing</h3>
                         <p>
-                            IMPROVING SEARCH WITH DEEP LEARNING FOR A MARKET LEADING ACCOUNTING RESEARCH PLATFORM<br>
+                            Improving Search With Deep Learning for a Market Leading Accounting Research Platform<br>
                             May 2021 - July 2021
                         </p>
                         
