--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi, my name is Kishan. I am a developer and researcher working to solve artificial intelligence. My work is on Natural Langauge Processing, specifically on Information Retrieval and Low Resource Langauges and I have been exploring Recommendation engines recently. I want to design and develop different techniques for retrieving information from the internet. I completed my Bachelor of Engineers from VTU, Bangalore, India and I am currently pursuing Master of Data Science, Computational Linguistics from The University of British Columbia. If you would like to know more about me and what I'm thinking, check out my GitHub and blog. If you would like to contact me, you can reach out to me on LinkedIn or email me. 
+                        Hi, my name is Kishan. I am a developer and researcher working to solve artificial intelligence. My work is on Natural Langauge Processing, specifically on Information Retrieval and Low Resource Langauges and I have been exploring Recommendation engines recently. I want to design and develop different techniques for retrieving information from the internet. I completed my Bachelor of Engineering from VTU, Bangalore, India and Master of Data Science, Computational Linguistics from The University of British Columbia. If you would like to know more about me and what I'm thinking, check out my GitHub and blog. If you would like to contact me, you can reach out to me on LinkedIn or email me. 
                     </p>
                 </div>
             </div>
